--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@xzyfer/as-integrations-fastify",
-	"version": "2.1.1",
+	"version": "3.0.0-canary.0",
 	"description": "An Apollo Server integration for use with Fastify",
 	"license": "MIT",
 	"type": "module",
